Fix outline on Firefox. Unfortunately, this breaks the outline radius

--- a/src/pages/TipCalculator.module.scss
+++ b/src/pages/TipCalculator.module.scss
@@ -87,7 +87,7 @@ label {
     font-weight: bold;
     outline-color: transparent;
     outline-width: 2px;
-    outline-style: auto;
+    outline-style: solid;
     transition: outline-color 0.25s;
     caret-color: hsl(172, 67%, 45%);
     &:active,
